Fix: people desc alignment

--- a/public_html/wp-content/themes/transcribathon/css/item-page.css
+++ b/public_html/wp-content/themes/transcribathon/css/item-page.css
@@ -498,7 +498,7 @@ h6.enrich-headers {
     height: 15px;
     margin: 0!important;
     position: relative;
-    bottom: 3px;
+    bottom: 1px;
     padding-left: 16px;
     line-height: normal;
 }
@@ -529,7 +529,7 @@ h6.enrich-headers {
 }
 .location-display-container .location-single p:first-of-type{
     border-bottom: 0.5px solid var(--bg-main-color);
-    height: 17px;
+    height: 20px;
 }
 #item-data-content .fas.fa-edit {
     display: none!important;
